@@ -1,5 +1,7 @@
 procps-ng-NEXT
 ---------------
+  * library
+    internal: days/users when value is 0                   issue #303
   * w: Don't segfault with -s option                       issue #301
 
 procps-ng-4.0.4
